fix: endpoint responses fixed
